src/main.css
@font-face {
  font-family: "nasalization";
  src: url(font/nasalization/nasalization.woff) format(woff),
       url(font/nasalization/nasalization.woff2) format(woff2);
}

@font-face {
  font-family: "xolonium";
  src: url(font/xolonium/xolonium.woff) format(woff),
       url(font/xolonium/xolonium.woff2) format(woff2);
}

* {
  box-sizing: border-box;
  word-break: break-word;
  overflow-wrap: break-word;
}

:root {
  background-color: black;
  color: white;
  --auth-size: min(calc(40vw + 40vh), 640px);
  --cyber-size: min(calc(2.5vw + 2.5vh), 64px);
}

body {
  margin: 0;
  background-image: url("/bg-img.webp");
  background-size: cover;
}

#auth-page {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#auth-container {
  width: var(--auth-size);
  height: calc(var(--auth-size) * 0.9);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: calc(var(--auth-size) / 100);
}

#main-heading {
  margin: 0;
  font-size: calc(var(--auth-size) * 0.1);
  font-family: nasalization, xolonium;
}

#sign-form {
  background-color: #000000cc;
  width: 90%;
  height: 80%;
  border: calc(var(--auth-size) / 250) solid white;
  font-family: xolonium;
  
}

#sign-type {
  height: 15%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

#sign-type button {
  background-color: transparent;
  padding-bottom: calc(var(--auth-size) / 100);
  border: none;
  color: inherit;
  font-family: inherit;
  font-size: calc(var(--auth-size) / 25);
}

#sign-type button.selected {
  border-bottom: 2px solid white;
}

#auth-greeting-container {
  height: 20%;
  padding-inline: calc(var(--auth-size) / 40);
  display: flex;
  align-items: flex-end;
  text-align: center;
  font-size: calc(var(--auth-size) / 40);
}

#auth-input-container {
  height: 40%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: calc(var(--auth-size) / 35);
  gap: calc(var(--auth-size) / 50);
}

#auth-input-container label {
  display: inline-block;
  width: calc(var(--auth-size) / 4);
  text-align: center
}

#auth-input-container input {
  background-color: transparent;
  width: calc(var(--auth-size) / 2.2);
  height: calc(var(--auth-size) / 18);
  padding: 0 calc(var(--auth-size) / 70);
  border: calc(var(--auth-size) / 400) solid white;
  border-radius: calc(var(--auth-size) / 200);
  color: inherit;
  font-family: inherit;
  font-size: inherit;
}

#auth-input-container input:focus {
  outline: none;
  border-color: red;
}

#auth-button {
  height: 25%;
  display: grid;
  justify-content: center;
  align-items: start;
}

#auth-button button {
  background-color: #ffffff55;
  width: calc(var(--auth-size) / 4);
  height: calc(var(--auth-size) / 15);
  border: none;
  color: inherit;
  font-family: inherit;
  font-size: 18px;
}

#auth-button button:active {
  background-color: #10c80a55;
  color: #10c80a;
}

#loading-overlay {
  background-color: #000000e0;
  width: 100vw;
  height: 100vh;
  position: fixed;
  display: grid;
  place-content: center;
}

#loading-spinner {
  width: max(4vw, 50px);
  height: max(4vw, 50px);
  border: max(0.4vw, 5px) solid white;
  border-right-color: transparent;
  border-radius: 100%;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.overflow-y-support {
  overflow-y: auto;
}

.overflow-y-support::-webkit-scrollbar {
  width: 8px;
}

.overflow-y-support::-webkit-scrollbar-thumb {
  background-color: #aaddff50;
  border-radius: 24px;
}

.overflow-y-support::-webkit-scrollbar-thumb:hover,
.overflow-y-support::-webkit-scrollbar-thumb:active {
  background-color: #aaddff;
}

.overflow-y-support::-webkit-scrollbar-track {
  background-color: transparent;
  border-radius: 24px;
}

.overflow-y-support::-webkit-scrollbar-track:hover {
  background-color: #aaddff50;
}

.overflow-y-support.smaller-scrollbar::-webkit-scrollbar {
  width: 6px;
}

.indicator.online {
  background-color: lime;
}

.indicator.offline {
  background-color: red;
}

.indicator.hidden {
  background-color: lightgray;
}

#image-preview {
  z-index: 2;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #000000dd;
  display: grid;
  place-content: center;
}

#image-preview .extras {
  position: fixed;
  top: 24px;
  right: 24px;
  background-color: #3d3d7d99;
  padding: 12px 18px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 16px;
  font-family: inherit;
  font-size: 16px;
  font-weight: bold;

  label {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 6px;
  }
}

#pop-up {
  z-index: 1;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #000000dd;
  display: grid;
  place-content: center;
}

#pop-up > div.main-container {
  background-color: #aaddff35;
  width: 480px;
  height: 300px;
  display: flex;
  flex-direction: column;
}

#pop-up .caption {
  margin: 0;
  padding-block: 16px;
  text-align: center;
  color: #aaddff99;
  font-size: 21px;
}

#pop-up .line {
  margin: 0;
  border-color: #aaddff50;
}

#pop-up .bottom {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
}

#pop-up .text-content {
  flex-grow: 1;
  padding-inline: 36px;
  display: grid;
  place-content: center;
  text-align: center;
  color: #aaddff;
  font-size: 18px;
}

#pop-up .buttons {
  width: 100%;
  padding-right: 24px;
  padding-bottom: 24px;
  display: flex;
  flex-direction: row-reverse;
  gap: 12px;
}

#pop-up .buttons button {
  background-color: transparent;
  padding: 8px 16px;
  border: 1px solid #aaddff50;
  color: red;
  font-family: inherit;
  font-size: 18px;
}

#pop-up .buttons button.first-button {
  background-color: #aaddff50;
  color: #aaddff;
}

#pop-up .buttons button:hover,
#pop-up .buttons button:active {
  opacity: 70%;
}
/* ... */

